overflow text, bug fix

--- a/css/main.css
+++ b/css/main.css
@@ -153,7 +153,7 @@ body {
   max-width: 380px;
   color: #000;
   background: #fff7;
-  backdrop-filter: blur(8px);
+  backdrop-filter: blur(4px);
   position: absolute;
   top: 100%;
   left: 50%;
@@ -162,13 +162,19 @@ body {
   clip-path: polygon(0 0, 100% 0, 100% 0, 0 0);
   border-radius: 0 0 0.5rem 0.5rem;
   box-shadow: 5px 5px 15px #0009;
-  font-size: calc(0.85rem + 25%);
-  padding: 1rem;
+  font-size: calc(1rem + 15%);
+  padding: 0;
+  text-align: right;
   margin: 0 0 1rem;
 }
+.women-grid .item-bottom blockquote {
+  margin: 1rem;
+}
 .women-grid .item-bottom figcaption {
+  margin: 1rem;
+  text-align: center;
   font-weight: bold;
-  font-size: 1.2rem;
+  font-size: 1.4rem;
 }
 .women-grid .random-excerpt {
   background: #454545;
